[package]
name = "rust-nginx-active-service-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
bollard = "0.16.0"
bytes = "1.6.0"
dotenv = "0.15.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["client"] }
hyper-util = { version = "0.1.3", features = ["http1", "http2"] }
mongodb = "2.8.2"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"
